# ECGFounder

./: .gitignore  download_checkpoints.sh  finetune_ECGFounder.ipynb  main.py  pyproject.toml
ecgfounder/: __init__.py  dataset.py  finetune_model.py  ptbxl_eval.py
