[project]
name = "ecgfounder"
version = "0.1.0"
description = "Foundation ECG model"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.10,<2.0",
    "scikit-learn>=1.6,<2.0",
    "matplotlib>=3.10,<4.0",
    "h5py>=3.14,<4.0",
    "tqdm>=4.66",
]

# -----------------------------
# CUDA variants (mirrors ecgxai)
# -----------------------------

[project.optional-dependencies]
cuda118 = [
    "torch==2.0.0; python_version == '3.10'",
    "torchvision==0.15.1; python_version == '3.10'",
    "torchaudio==2.0.0; python_version == '3.10'",
]

cuda121 = [
    "torch==2.2.2; python_version == '3.12'",
    "torchvision==0.17.2; python_version == '3.12'",
    "torchaudio==2.2.2; python_version == '3.12'",
]

# -----------------------------
# build system
# -----------------------------

[build-system]
requires = [
    "setuptools>=69.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -----------------------------
# uv configuration (identical)
# -----------------------------

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "python_version == '3.10'" },
    { index = "pytorch-cu121", marker = "python_version == '3.12'" },
]

torchvision = [
    { index = "pytorch-cu118", marker = "python_version == '3.10'" },
    { index = "pytorch-cu121", marker = "python_version == '3.12'" },
]

torchaudio = [
    { index = "pytorch-cu118", marker = "python_version == '3.10'" },
    { index = "pytorch-cu121", marker = "python_version == '3.12'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
