[project]
name = "ecgfounder"
version = "0.1.0"
description = "Foundation ECG model"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.10,<2.0",
    "scikit-learn>=1.6,<2.0",
    "matplotlib>=3.10,<4.0",
    "h5py>=3.14,<4.0",
    "tqdm>=4.66",
    "wfdb>=4.1",
]

# -----------------------------
# PyTorch variants
# -----------------------------

[project.optional-dependencies]
cpu = [
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
]

cuda118 = [
    "torch==2.0.0",
    "torchvision==0.15.1",
    "torchaudio==2.0.0",
]

cuda121 = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
]

# -----------------------------
# CLI entry point
# -----------------------------

[project.scripts]
ecgfounder = "ecgfounder.main:main"

# -----------------------------
# build system
# -----------------------------

[build-system]
requires = [
    "setuptools>=69.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ecgfounder*"]

# -----------------------------
# uv configuration
# -----------------------------

[tool.uv]
conflicts = [
    [
        { extra = "cuda118" },
        { extra = "cuda121" },
        { extra = "cpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cuda118" },
    { index = "pytorch-cu121", extra = "cuda121" },
]
torchvision = [
    { index = "pytorch-cu118", extra = "cuda118" },
    { index = "pytorch-cu121", extra = "cuda121" },
]
torchaudio = [
    { index = "pytorch-cu118", extra = "cuda118" },
    { index = "pytorch-cu121", extra = "cuda121" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
